# marketing-agent

./: Dockerfile  README.md  pyproject.toml
MarketingAgent/: agent.py  config.py  tools.py
MarketingAgent/assistants/: common.py
MarketingAgent/assistants/editing/: agent.py  tools.py
MarketingAgent/assistants/generation/: agent.py  tools.py
